--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "0.0.29",
+    "@angular-devkit/core": "^8.3.19",
     "@angular/animations": "7.2.7",
     "@angular/cdk": "7.3.7",
     "@angular/common": "7.2.7",
     "@angular/compiler": "7.2.7",
-    "@angular/core": "^7.2.7",
+    "@angular/core": "^7.2.15",
     "@angular/forms": "7.2.7",
     "@angular/http": "7.2.7",
     "@angular/platform-browser": "7.2.7",
@@ -40,9 +40,9 @@
     "core-js": "^2.4.1",
     "http-server": "0.10.0",
     "memo-decorator": "1.0.2",
-    "node-sass": "4.7.2",
-    "puppeteer": "1.12.1",
-    "replace": "0.3.0",
+    "node-sass": "^4.13.0",
+    "puppeteer": "^2.0.0",
+    "replace": "^1.1.1",
     "rxjs": "6.4.0",
     "sass-loader": "7.0.1",
     "service-worker": "0.0.0",
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
-    "@angular/cli": "^7.3.5",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "7.2.7",
     "@angular/language-service": "7.2.7",
     "@fortawesome/fontawesome-free": "5.4.2",
@@ -68,7 +68,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
@@ -80,11 +80,11 @@
     "ngx-typeahead": "6.2.0",
     "ngx-youtube-player": "7.1.1",
     "prettier": "1.11.1",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "rimraf": "2.6.1",
     "shx": "0.2.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "typescript": "^3.1.1"
+    "typescript": "^3.7.2"
   }
 }
