--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rxjs": "6.5.3",
     "sass-loader": "7.0.1",
     "service-worker": "0.0.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
