--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "core-js": "^2.4.1",
     "http-server": "0.10.0",
     "memo-decorator": "1.0.2",
+    "ngx-tooltip": "0.0.9",
     "node-sass": "^4.13.0",
     "puppeteer": "^2.0.0",
     "replace": "^1.1.1",
     "rxjs": "6.5.3",
     "sass-loader": "7.0.1",
     "service-worker": "0.0.0",
-    "zone.js": "^0.9.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
