--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   - npm install typescript@3.5
   - npm install -g typescript@3.5
   - ng build
-  - mv dist/echoes-player/* public/
+  - mv dist/* public/
   artifacts:
     paths:
     - public
