--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "echoes-player",
-  "version": "4.4.1",
+  "name": "ytplayer-patojad",
+  "version": "4.4.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
