--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
     }
   },
   "cli": {
-    "warnings": {}
+    "warnings": {},
+    "analytics": false
   },
   "schematics": {
     "@schematics/angular:component": {
